--- a/server/public/index.html
+++ b/server/public/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Chatting...</h1>
 
-    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js">
+    <script src="/socket.io/socket.io.js">
       const socket = io();
     </script>
   </body>
